<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.todoapp.AddTask" >
 
    <item android:id="@+id/action_importance"
          android:icon="@drawable/importance_off"
          android:title="@string/importance_off"
          android:showAsAction="always" />

    <item android:id="@+id/action_location"
          android:icon="@drawable/location_off"
          android:title="@string/geofence_off"
          android:showAsAction="always" />
    
     <item android:id="@+id/action_alarm"
          android:icon="@drawable/alarm_off"
       	  android:title="@string/alarm_off"
          android:showAsAction="always" />
    
    <!--  <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
 -->
    
</menu>