<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="il.ac.shenkar.doitsimple.MainActivity">
    
	  <TextView
	      android:id="@+id/existing_task_description"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_toLeftOf="@+id/importance"
	      android:layout_alignParentLeft="true"
	      android:hint="@string/task_description"
	      android:textSize="22sp" />

	    <ImageView
	        android:id="@+id/importance"
	        android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:layout_alignTop="@+id/existing_task_description"
	        android:layout_marginLeft="10dp"
	        android:layout_toLeftOf="@+id/location"
	        android:contentDescription="@string/importance_off"
	        android:src="@drawable/importance_off" />

	    <ImageView
	        android:id="@+id/location"
	        android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:layout_alignTop="@+id/existing_task_description"
	        android:layout_toLeftOf="@+id/alarmPic"
	        android:contentDescription="@string/geofence_off"
	        android:src="@drawable/location_off" />

	    <ImageView
	        android:id="@+id/alarmPic"
	        android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:layout_alignBottom="@+id/importance"
	        android:layout_alignParentRight="true"
	        android:contentDescription="@string/notifications_alarm"
	        android:src="@drawable/alarm_off" />
	  
</RelativeLayout>
